fix navbar collapse on mobile view

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,13 +7,12 @@ body {
 .navbar {
     background: rgb(38, 178, 184);
     background: linear-gradient(45deg, rgba(38, 178, 184, 1) 0%, rgba(136, 175, 97, 1) 100%);
-    height: 7vh;
 }
 
 .home-container {
     font-family: Arial, sans-serif;
     background-image: url(../images/bg-img.jpg);
-    height: 93vh;
+    height: 94vh;
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
